--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav>
     <div class="left">
       <div class="logo">
-        <img src="fimg/logoff.jpg" alt="App logo">
+        <img src="facebook/fimg/logoff.jpg" alt="App logo">
       </div>
 
       <div class="search_bar">
@@ -41,7 +41,7 @@
       <i class="fa-brands fa-facebook-messenger"></i>
       <i class="fa-solid fa-bell"></i>
       <i class="fa-solid fa-moon"></i>
-      <img src="fimg/bubbles profile.jpg" alt="Profile">
+      <img src="facebook/fimg/bubbles profile.jpg" alt="Profile">
     </div>
   </nav>
 
@@ -52,37 +52,37 @@
     <aside class="left">
       <!-- fixed list (icon + label aligned) -->
       <div class="menu_item">
-        <img src="fimg/bubbles profile.jpg" alt="">
+        <img src="facebook/fimg/bubbles profile.jpg" alt="">
         <span>Hind Bondoq</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/meta.jpg" alt="">
+        <img src="facebook/fimg/meta.jpg" alt="">
         <span>Meta AI</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/friends.png" alt="">
+        <img src="facebook/fimg/friends.png" alt="">
         <span>Friends</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/dashboard.png" alt="">
+        <img src="facebook/fimg/dashboard.png" alt="">
         <span>Professional dashboard</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/saved.png" alt="">
+        <img src="facebook/fimg/saved.png" alt="">
         <span>Saved</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/feeds.png" alt="">
+        <img src="facebook/fimg/feeds.png" alt="">
         <span>Feeds</span>
       </div>
 
       <div class="menu_item">
-        <img src="fimg/down_arrow.png" alt="">
+        <img src="facebook/fimg/down_arrow.png" alt="">
         <span>See more</span>
       </div>
 
@@ -94,32 +94,32 @@
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/ahu.jpg" alt="AHU Group">
+        <img src="facebook/fimg/ahu.jpg" alt="AHU Group">
         <p>AHU Group</p>
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/alovera.jpg" alt="Aloe Vera">
+        <img src="facebook/fimg/alovera.jpg" alt="Aloe Vera">
         <p>Alovera</p>
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/chesss.jpg" alt="Chess Club">
+        <img src="facebook/fimg/chesss.jpg" alt="Chess Club">
         <p>Chess Club</p>
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/shortcut4.jpg" alt="Scholarship">
+        <img src="facebook/fimg/shortcut4.jpg" alt="Scholarship">
         <p>Scholarship</p>
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/fitness.jpg" alt="Fitness Group">
+        <img src="facebook/fimg/fitness.jpg" alt="Fitness Group">
         <p>Fitness Group</p>
       </div>
 
       <div class="shortcuts">
-        <img src="fimg/down_arrow.png" alt="See more">
+        <img src="facebook/fimg/down_arrow.png" alt="See more">
       </div>
     </aside>
 
@@ -128,44 +128,44 @@
 
       <div class="top_box">
         <div class="my_story_card">
-          <img src="fimg/story1.jpg" alt="My story">
+          <img src="facebook/fimg/story1.jpg" alt="My story">
           <div class="story_upload">
-            <img src="fimg/upload.png" alt="Upload">
+            <img src="facebook/fimg/upload.png" alt="Upload">
             <p class="story_tag">Create story</p>
           </div>
         </div>
 
         <div class="story_card">
-          <img src="fimg/story2.jpg" alt="Story">
+          <img src="facebook/fimg/story2.jpg" alt="Story">
           <div class="story_profile">
-            <img src="fimg/profile1.png" alt="Reem profile">
+            <img src="facebook/fimg/profile1.png" alt="Reem profile">
             <div class="circle"></div>
           </div>
           <div class="story_name"><p class="name">Reem Bondoq</p></div>
         </div>
 
         <div class="story_card">
-          <img src="fimg/story3.jpg" alt="Story">
+          <img src="facebook/fimg/story3.jpg" alt="Story">
           <div class="story_profile">
-            <img src="fimg/profile2.jpg" alt="Raghad profile">
+            <img src="facebook/fimg/profile2.jpg" alt="Raghad profile">
             <div class="circle"></div>
           </div>
           <div class="story_name"><p class="name">Raghad Bondoq</p></div>
         </div>
 
         <div class="story_card">
-          <img src="fimg/story4.jpg" alt="Story">
+          <img src="facebook/fimg/story4.jpg" alt="Story">
           <div class="story_profile">
-            <img src="fimg/profile3.jpg" alt="Bashar profile">
+            <img src="facebook/fimg/profile3.jpg" alt="Bashar profile">
             <div class="circle"></div>
           </div>
           <div class="story_name"><p class="name">Bashar Bondoq</p></div>
         </div>
 
         <div class="story_card">
-          <img src="fimg/story5.jpg" alt="Story">
+          <img src="facebook/fimg/story5.jpg" alt="Story">
           <div class="story_profile">
-            <img src="fimg/profile4.jpg" alt="Mohammed profile">
+            <img src="facebook/fimg/profile4.jpg" alt="Mohammed profile">
             <div class="circle"></div>
           </div>
           <div class="story_name"><p class="name">Mohammed Bondoq</p></div>
@@ -174,7 +174,7 @@
 
       <div class="my_post">
         <div class="post_top">
-          <img src="fimg/profile.jpg" alt="You">
+          <img src="facebook/fimg/profile.jpg" alt="You">
           <input type="text" placeholder="What's on your mind, Hind?">
         </div>
 
@@ -202,7 +202,7 @@
       <div class="friends_post">
         <div class="friend_post_top">
           <div class="img_and_name">
-            <img src="fimg/p1.jpg" alt="Yasmeen">
+            <img src="facebook/fimg/p1.jpg" alt="Yasmeen">
             <div class="friends_name">
               <p class="friends_name">Yasmeen Ahmad</p>
               <p class="time">16h.<i class="fa-solid fa-user-group"></i></p>
@@ -211,13 +211,13 @@
           <div class="menu"><i class="fa-solid fa-ellipsis"></i></div>
         </div>
 
-        <img src="fimg/post1.jpg" alt="Post image">
+        <img src="facebook/fimg/post1.jpg" alt="Post image">
 
         <div class="info">
           <div class="emoji_img">
-            <img src="fimg/like.png" alt="">
-            <img src="fimg/haha.png" alt="">
-            <img src="fimg/heart.png" alt="">
+            <img src="facebook/fimg/like.png" alt="">
+            <img src="facebook/fimg/haha.png" alt="">
+            <img src="facebook/fimg/heart.png" alt="">
             <p>You, zain Bondoq and 25K others</p>
           </div>
           <div class="comment">
@@ -237,7 +237,7 @@
         <hr>
 
         <div class="comment_warpper">
-          <img src="fimg/bubbles profile.jpg" alt="You">
+          <img src="facebook/fimg/bubbles profile.jpg" alt="You">
           <div class="circle"></div>
           <div class="comment_search">
             <input type="text" placeholder="Write a comment">
@@ -252,7 +252,7 @@
       <div class="friends_post">
         <div class="friend_post_top">
           <div class="img_and_name">
-            <img src="fimg/p3.jpg" alt="Abdullah">
+            <img src="facebook/fimg/p3.jpg" alt="Abdullah">
             <div class="friends_name">
               <p class="friends_name">Abdullah alwekhian</p>
               <p class="time">21h.<i class="fa-solid fa-user-group"></i></p>
@@ -261,13 +261,13 @@
           <div class="menu"><i class="fa-solid fa-ellipsis"></i></div>
         </div>
 
-        <img src="fimg/post6.jpg" alt="Post image">
+        <img src="facebook/fimg/post6.jpg" alt="Post image">
 
         <div class="info">
           <div class="emoji_img">
-            <img src="fimg/like.png" alt="">
-            <img src="fimg/haha.png" alt="">
-            <img src="fimg/heart.png" alt="">
+            <img src="facebook/fimg/like.png" alt="">
+            <img src="facebook/fimg/haha.png" alt="">
+            <img src="facebook/fimg/heart.png" alt="">
             <p>You, Basima Alwekhian and 44 others</p>
           </div>
           <div class="comment">
@@ -287,7 +287,7 @@
         <hr>
 
         <div class="comment_warpper">
-          <img src="fimg/bubbles profile.jpg" alt="You">
+          <img src="facebook/fimg/bubbles profile.jpg" alt="You">
           <div class="circle"></div>
           <div class="comment_search">
             <input type="text" placeholder="Write a comment">
@@ -302,7 +302,7 @@
       <div class="friends_post">
         <div class="friend_post_top">
           <div class="img_and_name">
-            <img src="fimg/userprofile.jpg" alt="Aya">
+            <img src="facebook/fimg/userprofile.jpg" alt="Aya">
             <div class="friends_name">
               <p class="friends_name">Aya Bondoq</p>
               <p class="time">16h.<i class="fa-solid fa-user-group"></i></p>
@@ -311,13 +311,13 @@
           <div class="menu"><i class="fa-solid fa-ellipsis"></i></div>
         </div>
 
-        <img src="fimg/post4.jpg" alt="Post image">
+        <img src="facebook/fimg/post4.jpg" alt="Post image">
 
         <div class="info">
           <div class="emoji_img">
-            <img src="fimg/like.png" alt="">
-            <img src="fimg/haha.png" alt="">
-            <img src="fimg/heart.png" alt="">
+            <img src="facebook/fimg/like.png" alt="">
+            <img src="facebook/fimg/haha.png" alt="">
+            <img src="facebook/fimg/heart.png" alt="">
             <p>You, zain Bondoq and 25K others</p>
           </div>
           <div class="comment">
@@ -337,7 +337,7 @@
         <hr>
 
         <div class="comment_warpper">
-          <img src="fimg/bubbles profile.jpg" alt="You">
+          <img src="facebook/fimg/bubbles profile.jpg" alt="You">
           <div class="circle"></div>
           <div class="comment_search">
             <input type="text" placeholder="Write a comment">
@@ -362,7 +362,7 @@
         <h4 class="r_title">Sponsored</h4>
 
         <a class="ad" href="https://www.adobe.com/mena_en/creativecloud/photography.html" target="_blank" rel="noopener noreferrer">
-          <img src="fimg/ad1.jpg" alt="Adobe Lightroom">
+          <img src="facebook/fimg/ad1.jpg" alt="Adobe Lightroom">
           <div class="ad_info">
             <strong>Remove any distraction.</strong>
             <div class="meta">adobe.com</div>
@@ -370,7 +370,7 @@
         </a>
 
         <a class="ad" href="https://iiabank.com.jo/ar/page/iiab-app" target="_blank" rel="noopener noreferrer">
-          <img src="fimg/ad2.jpg" alt="Booking">
+          <img src="facebook/fimg/ad2.jpg" alt="Booking">
           <div class="ad_info">
             <strong>Booking.com</strong>
             <div class="meta">booking.com</div>
@@ -386,7 +386,7 @@
         </div>
 
         <div class="req">
-          <img class="avatar-sm" src="fimg/lara.jpg" alt="Lara lara">
+          <img class="avatar-sm" src="facebook/fimg/lara.jpg" alt="Lara lara">
           <div class="req_body">
             <strong class="req_name">Lara lara</strong>
             <div class="meta">1 mutual friend · 1d</div>
@@ -403,7 +403,7 @@
       <section class="card r_card">
         <h4 class="r_title">Birthdays</h4>
         <div class="bday">
-          <img src="fimg/amani.jpg" class="icon" alt="Amani">
+          <img src="facebook/fimg/amani.jpg" class="icon" alt="Amani">
           <p><strong>Amani Nader</strong>'s birthday is today.</p>
         </div>
       </section>
